--- a/aula-2/public/index.html
+++ b/aula-2/public/index.html
@@ -12,6 +12,30 @@
 <body>
   <h1>Meu segundo servidor web</h1>
 
+  <button id="button">Fazer a requisição</button>
+  <div id="response"></div>
+
+  <script>
+    const requestButton = document.getElementById('button');
+    const responseDiv = document.getElementById('response');
+
+    requestButton.addEventListener('click', () => {
+      fetch('http://localhost:3000').then((response) => {
+        if(!response.ok){
+          throw new Error ('Erro ocorrido');
+        }
+        return response.text();
+      }).then(data => {
+        responseDiv.textContent = data;
+      }).catch(error => {
+        responseDiv.textContent = error.message
+      })
+    });
+
+
+  </script>
+
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
     crossorigin="anonymous"></script>
